--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -56,7 +56,28 @@
         </ul>
         <div class="tab-content col-lg-9">
             <div class="tab-pane fade show active " id="navs-top-profile" role="tabpanel">
-               <h4>Đơn hàng của bạn</h4>
+                <div class="mb-4 mx-4">
+                    <ul class="nav nav-tabs nav-fill me-lg-auto mb-2 mb-lg-0">
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder == 0 ?'active':''}|" aria-current="page" th:href="@{/order}">Tất cả</a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder == 1 ?'active':''}|" th:href="@{/order/status/1}">Chờ xử lý</a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder == 3 ?'active':''}|" th:href="@{/order/status/3}">Vận chuyển</a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder == 4 ?'active':''}|" th:href="@{/order/status/4}">Đã giao</a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder == 5 ?'active':''}|" th:href="@{/order/status/5}">Đã hủy</a>
+                        </li>
+                        <li class="nav-item  ">
+                            <a th:class="|nav-link page ${session.activeOrder== 6 ? 'active':''}|" th:href="@{/order/bill_return}">Trả hàng/Hoàn tiền</a>
+                        </li>
+                    </ul>
+                </div>
                 <div class="mb-4 mx-4">
                     <div class="mb-3 row order" th:each="bill, billStat : ${bill}">
                         <div class="row mt-3">
@@ -128,7 +149,7 @@
                                 >Xem chi tiết
                                 </a>
                                 <a class="btn btn-danger return"
-                                   th:if="${(bill.billStatus.code== 'CO' || bill.billStatus.code== 'RE') && check[billStat.index] }"
+                                   th:if="${!listCheckConditionReturn[billStat.index] && check[billStat.index] }"
                                    th:href="@{/order_return/detail/{id}(id=${bill.id})}">
                                     Trả hàng
                                 </a>
