--- a/webBanTiVi/src/main/resources/templates/user/page/return_for_returned/viewReturn.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/return_for_returned/viewReturn.html
@@ -33,6 +33,7 @@
 
 
 
+
 </style>
 <section>
     <div class="text-center mb-3" sec:authorize="isAuthenticated()">
@@ -160,17 +161,19 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-3 text-end">
-                                            <div class="mb-2">
-                                                <span th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                  <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                                <span th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
-                                                                         [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
+                                            <div>
+                                                <span class="text-strike-through"> [(${#numbers.formatDecimal(historyBillReturn.billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                                <span class="fs-tiny text-decoration-underline">đ</span>
+                                            </div>
+                                            <div th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
+                                              <span >
+                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
                                                                          <strong class="fs-tiny text-decoration-underline">đ</strong>
                                                 </span>
-                                                <span th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
+                                            </div>
+                                            <div th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
+                                                <span >
+                                                    [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price,0,'COMMA',0,'POINT')})]
                                                                    <strong class="fs-tiny text-decoration-underline">đ</strong>
                                                 </span>
                                             </div>
@@ -179,13 +182,15 @@
                                 </div>
                             </div>
                             <hr>
-                            <div th:if="${historyBillReturnList.returnMoney >=0}" class="text-end text-black mb-1 fw-bold">
+                            <div th:if="${historyBillReturnList.returnMoney >=0}"
+                                 class="text-end text-black mb-1 fw-bold">
                                 Số tiền hoàn
                                 lại:[(${#numbers.formatDecimal(historyBillReturnList?.returnMoney,0,'COMMA',0,'POINT')})]
                             </div>
-                            <div th:if="${historyBillReturnList.returnMoney < 0}" class="text-end text-black mb-1 fw-bold"
+                            <div th:if="${historyBillReturnList.returnMoney < 0}"
+                                 class="text-end text-black mb-1 fw-bold"
                                  id="returnMoneyDiv">
-                                Khách hàng gửi lại : <span>[(${#numbers.formatDecimal(historyBillReturnList?.returnMoney,0,'COMMA',0,'POINT')})]</span>
+                                Khách hàng gửi lại : <span>[(${#numbers.formatDecimal(historyBillReturnList?.returnMoney+(historyBillReturnList?.returnMoney*2),0,'COMMA',0,'POINT')})]</span>
                             </div>
 
                             <hr>
@@ -194,11 +199,6 @@
                                 <a class="btn btn-outline-dark"
                                    th:href="@{/view_order/detail_return/{id}/{returnTimes}(id=${historyBillReturnList?.bill.id}, returnTimes=${historyBillReturnList?.returnTimes})}"
                                 >Xem chi tiết
-                                </a>
-                                <a class="btn btn-outline-dark"
-                                   onclick="return confirm('Xác nhận hủy yêu cầu trả hàng')"
-                                   th:href="@{/order/cancel/{id}(id=${historyBillReturnList?.bill.id})}">
-                                    Hủy yêu cầu
                                 </a>
                             </div>
                         </div>
@@ -230,6 +230,7 @@
             title: "Trả hàng thành công!"
         });
     }
+
 
 
 
