--- a/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/bill/bill_detail.html
@@ -64,7 +64,7 @@
                         <button type="button" class="nav-link " role="tab" data-bs-toggle="tab"
                                 data-bs-target="#navs-billReturn-info" aria-controls="navs-top-home"
                                 aria-selected="true">
-                           Lịch sử trả hàng
+                            Lịch sử trả hàng
                         </button>
                     </li>
                 </ul>
@@ -184,11 +184,11 @@
                                         <div class="row">
                                             <div class="row ">
                                                 <div class="col-sm-2">
-                                                        <div th:each="image:${historyBillReturn?.billProduct?.product?.listImage}">
-                                                            <img th:if="${image.location == true}"
-                                                                 th:src="@{'/image/product/'+${image.link}}"
-                                                                 alt="" width="80px" height="80px">
-                                                        </div>
+                                                    <div th:each="image:${historyBillReturn?.billProduct?.product?.listImage}">
+                                                        <img th:if="${image.location == true}"
+                                                             th:src="@{'/image/product/'+${image.link}}"
+                                                             alt="" width="80px" height="80px">
+                                                    </div>
                                                 </div>
                                                 <div class="col-sm-5 ">
                                                     <div class="mb-2">
@@ -219,30 +219,30 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-sm-2 text-end">
-                                                    <div class="mb-2">
-                                                <span th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                  <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
-                                                                         [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
-                                                                         <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                   <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
+                                                    <div th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
+                                                        <span class="text-strike-through">[(${#numbers.formatDecimal(historyBillReturn.billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                                        <span class="fs-tiny text-decoration-underline">đ</span>
+                                                    </div>
+                                                    <div th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
+                                                        <span>[(${#numbers.formatDecimal(historyBillReturn.billProduct.price-billProduct.reducedMoney,0,'COMMA',0,'POINT')})]</span>
+                                                        <span class="fs-tiny text-decoration-underline">đ</span>
+                                                    </div>
+                                                    <div th:if="${historyBillReturn?.billProduct.reducedMoney ==0}">
+                                                        <span>[(${#numbers.formatDecimal(historyBillReturn.billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                                        <span class="fs-tiny text-decoration-underline">đ</span>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                     <hr>
-                                    <div th:if="${historyBillReturnList.returnMoney >=0}" class="text-end text-black mb-1 fw-bold">
+                                    <div th:if="${historyBillReturnList.returnMoney >=0}"
+                                         class="text-end text-black mb-1 fw-bold">
                                         Số tiền hoàn
                                         lại:[(${#numbers.formatDecimal(historyBillReturnList?.returnMoney,0,'COMMA',0,'POINT')})]
                                     </div>
-                                    <div th:if="${historyBillReturnList.returnMoney < 0}" class="text-end text-black mb-1 fw-bold"
+                                    <div th:if="${historyBillReturnList.returnMoney < 0}"
+                                         class="text-end text-black mb-1 fw-bold"
                                          id="returnMoneyDiv">
                                         Khách hàng gửi lại : <span>[(${#numbers.formatDecimal(historyBillReturnList?.returnMoney,0,'COMMA',0,'POINT')})]</span>
                                     </div>
