--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -113,19 +113,17 @@
                                         </div>
                                     </div>
                                     <div class="col-sm-3 text-end">
-                                        <div class="mb-2">
-                                        <span th:if="${billProduct.reducedMoney!=0}">
-                                          [(${#numbers.formatDecimal(billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                          <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                        </span>
-                                            <span th:if="${billProduct.reducedMoney !=0}">
-                                                 [(${#numbers.formatDecimal(billProduct.product.priceExport-billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
-                                                 <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                            </span>
-                                            <span th:if="${billProduct.reducedMoney==0}">
-                                          [(${#numbers.formatDecimal(billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                           <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                        </span>
+                                        <div>
+                                            <span class="text-strike-through">[(${#numbers.formatDecimal(billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                            <span class="fs-tiny text-decoration-underline">đ</span>
+                                        </div>
+                                        <div th:if="${billProduct.reducedMoney !=0}">
+                                            <span>[(${#numbers.formatDecimal(billProduct.price-billProduct.reducedMoney,0,'COMMA',0,'POINT')})]</span>
+                                            <span class="fs-tiny text-decoration-underline">đ</span>
+                                        </div>
+                                        <div th:if="${billProduct.reducedMoney==0}">
+                                            <span>[(${#numbers.formatDecimal(billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                            <span class="fs-tiny text-decoration-underline">đ</span>
                                         </div>
                                     </div>
                                 </div>
@@ -133,11 +131,7 @@
                             <hr>
                             <div class="text-end mb-3">
                                 Thanh toán:
-                                <span class="col-sm-2" th:if="${bill.voucherValue != null}">
-                                    [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee-bill.voucherValue,0,'COMMA',0,'POINT')})]
-                                      <span class="text-decoration-underline fs-tiny">đ</span>
-                                </span>
-                                <span class="col-sm-2" th:if="${bill.voucherValue == null}">
+                                <span class="col-sm-2">
                                         [(${#numbers.formatDecimal(bill.totalPrice+bill.deliveryNotes[0].deliveryFee,0,'COMMA',0,'POINT')})]
                                       <span class="text-decoration-underline fs-tiny">đ</span>
                                 </span>
