--- a/webBanTiVi/src/main/resources/templates/user/page/profile/return.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/return.html
@@ -113,12 +113,6 @@
                         <input type="text" th:value="${return}" id="return" hidden="hidden">
                         <div tabindex="-1" aria-hidden="true">
                             <input type="text" th:value="${bill.id}" class="id" hidden="hidden">
-                            <div th:if="${!checkQuantity}">
-                                <h4 style="color: black" class="text-center">(*)Rất tiếc,đơn hàng
-                                    này
-                                    của
-                                    bạn không còn sản phẩm có thể trả!</h4>
-                            </div>
                             <div th:if="${checkQuantity}">
                                 <div class="table-responsive text-nowrap">
                                     <table class="table table-bordered">
@@ -167,7 +161,7 @@
                                             </td>
                                             <td>
                                                 <input type th:class="|price${billProduct.id}  form-control|"
-                                                       th:value="${#numbers.formatDecimal(billProduct.price,0,'COMMA',0,'POINT')}"
+                                                       th:value="${#numbers.formatDecimal(billProduct.price-billProduct.reducedMoney,0,'COMMA',0,'POINT')}"
                                                        disabled>
                                             </td>
                                             <td>
@@ -293,8 +287,6 @@
                             <span class="text-end col-sm-6">Mã đơn:[(${bill.code})] | [(${bill.billStatus.status})]</span>
                             <hr>
                         </div>
-                        <span>[(${session.pageView})]</span>
-<!--                        <input type="text" th:value="${return}" id="return" hidden="hidden">-->
                         <div tabindex="-1" aria-hidden="true">
                             <input type="text" th:value="${bill.id}" class="id" hidden="hidden">
                             <div th:if="${checkQuantity}">
@@ -345,7 +337,7 @@
                                             </td>
                                             <td>
                                                 <input type th:class="|price${billProduct.id}  form-control|"
-                                                       th:value="${#numbers.formatDecimal(billProduct.price,0,'COMMA',0,'POINT')}"
+                                                       th:value="${#numbers.formatDecimal(billProduct.price-billProduct.reducedMoney,0,'COMMA',0,'POINT')}"
                                                        disabled>
                                             </td>
                                             <td>
@@ -438,10 +430,10 @@
                                     </div>
                                 </div>
                                 <hr>
-                                <div class="row mb-3 noteReturn">
+                                <div class="row mb-3 noteReturn" >
                                     <span class="text-danger">(*)Lưu ý:</span>
                                     <span>Số tiền hoàn lại có thể sẽ khác so với tổng giá trị sản phẩm hoàn trả do <a
-                                            href="">chính sách trả hàng/hoàn tiền của cửa hàng</a>! </span>
+                                            th:href="@{/policy}">chính sách trả hàng/hoàn tiền của cửa hàng</a>! </span>
                                 </div>
                                 <div class="mb-3 text-center">
                                     <Button type="submit" id="complete"
