--- a/webBanTiVi/src/main/resources/templates/user/page/return_for_returned/detail_viewReturn.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/return_for_returned/detail_viewReturn.html
@@ -60,6 +60,9 @@
        font-size: 13px;
        color: rgba(0,0,0,.54);
     }
+
+
+
 </style>
 
 <section>
@@ -79,7 +82,7 @@
         </div>
     </div>
     <div class="nav-align-left mb-4">
-        <ul class="nav nav-tabs col-lg-2" role="tablist" sec:authorize="isAuthenticated()" >
+        <ul class="nav nav-tabs col-lg-2" role="tablist" sec:authorize="isAuthenticated()">
             <li class="nav-item">
                 <a type="button" class="nav-link pb-3 pt-35 fs-5 te" role="tab"
                    aria-controls="navs-top-home" aria-selected="false"
@@ -143,23 +146,25 @@
                                                                                       <span th:if="${!iterStat.last}">,</span>
                                                                                 </span>
                                         </div>
-                                        <div class="text-gray">
-                                            <span>x[(${historyBillReturn.quantityAcceptReturn})]</span>
+                                        <div class="text-gray" style="font-size: 13px">
+                                            <span>Yêu cầu: x[(${historyBillReturn.quantityRequestReturn})]</span> (<span>Đồng ý: x[(${historyBillReturn.quantityAcceptReturn})]</span>)
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-3 text-end">
-                                    <div class="mb-2">
-                                                <span th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                  <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
-                                                                         [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
+                                    <div>
+                                        <span class="text-strike-through"> [(${#numbers.formatDecimal(historyBillReturn.billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                        <span class="fs-tiny text-decoration-underline">đ</span>
+                                    </div>
+                                    <div th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
+                                              <span>
+                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
                                                                          <strong class="fs-tiny text-decoration-underline">đ</strong>
                                                 </span>
-                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
+                                    </div>
+                                    <div th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
+                                                <span>
+                                                    [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price,0,'COMMA',0,'POINT')})]
                                                                    <strong class="fs-tiny text-decoration-underline">đ</strong>
                                                 </span>
                                     </div>
@@ -171,16 +176,29 @@
                     <br>
                     <div class="row mb-3">
                         <div class="qsfSj4">
+                            <div class="ROZVxd dCx+CJ"><span>Tổng giá trị sản phẩm hoàn trả:  </span></div>
+                            <div class="+MprAa"><span>[(${#numbers.formatDecimal(totalReturn,0,'COMMA',0,'POINT')})]</span><span>đ</span></div>
+                        </div>
+                        <div class="qsfSj4" th:if="${listHDTO.returnMoney < 0}" >
+                            <div class="ROZVxd dCx+CJ"><span>Voucher:  </span></div>
+                            <div class="+MprAa"><span>-[(${#numbers.formatDecimal(listHDTO.bill.voucherValue,0,'COMMA',0,'POINT')})]</span><span>đ</span></div>
+                        </div>
+                        <div class="qsfSj4">
                             <div th:if="${listHDTO.returnMoney >=0}">
                                 <div class="ROZVxd dCx+CJ">Số tiền hoàn lại:</div>
                             </div>
-                            <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span>
-                                <span>đ</span></div>
+                            <div th:if="${listHDTO.returnMoney >=0}">
+                                <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span>
+                                    <span>đ</span></div>
+                                </span>
+                            </div>
                             <div th:if="${listHDTO.returnMoney < 0}">
                                 <div class="ROZVxd dCx+CJ">Khách hàng gửi lại :</div>
-                                <div class="+MprAa">
-                                    <span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span><span>đ</span>
-                                </div>
+                            </div>
+                            <div th:if="${listHDTO.returnMoney <0}">
+                                <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney-(listHDTO.returnMoney*2),0,'COMMA',0,'POINT')})]</span>
+                                    <span>đ</span></div>
+                                </span>
                             </div>
                         </div>
                         <div class="qsfSj4">
@@ -189,19 +207,18 @@
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Số tài khoản:  </span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.accountNumber})]
-                            </div>
-                            <span class="errorSTK text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.accountNumber})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">9704198526191432198</div>
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Ngân hàng:  </span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.bank})]</div>
-                            <span class="errorNH text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.bank})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">NCB</div>
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Chủ sở hữu:</span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.owner})]</div>
-                            <span class="errorCSH text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.owner})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">NGUYEN VAN A</div>
                         </div>
                     </div>
                     <div class="zrDZlI Q3-CvB">
@@ -216,6 +233,10 @@
                                     </span>
                             </div>
                         </div>
+                    </div>
+                    <div class="row mb-3 noteReturn" th:if="${listHDTO.returnMoney <0}">
+                        <span class="text-danger">(*)Lưu ý:</span>
+                        <span>Giá trị đơn hàng sau khi trả hàng của bạn không còn đủ điều kiện áp dụng voucher , hãy xem chi tiết trong <a th:href="@{/policy}">chính sách trả hàng/hoàn tiền của cửa hàng</a>! </span>
                     </div>
                 </div>
             </div>
@@ -239,7 +260,7 @@
                     <div th:each=" historyBillReturn : ${listHDTO.historyBillProductList}">
                         <div class="row">
                             <div class="row mb-3">
-                                <div class="col-sm-1">
+                                <div class="col-sm-2">
                                     <div class="mb-2">
                                         <div th:each="image:${historyBillReturn?.billProduct?.product?.listImage}">
                                             <img th:if="${image.location == true}"
@@ -248,7 +269,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-8">
+                                <div class="col-sm-7">
                                     <div class="mb-2">
                                         <div style="display: flex">
                                                 <span class="text-black">[(${historyBillReturn?.billProduct?.product?.product?.nameProduct+'-'+historyBillReturn?.billProduct?.product?.product.sku})]
@@ -262,24 +283,26 @@
                                                                                 </span>
                                         </div>
                                         <div class="text-gray">
-                                            <span>x[(${historyBillReturn.quantityAcceptReturn})]</span>
+                                            <span>Yêu cầu: x[(${historyBillReturn.quantityRequestReturn})]</span> (<span>Đồng ý: x[(${historyBillReturn.quantityAcceptReturn})]</span>)
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-sm-3 text-end">
-                                    <div class="mb-2">
-                                                <span th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                  <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney !=0}">
-                                                                         [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
-                                                                         <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
-                                        <span th:if="${historyBillReturn?.billProduct.reducedMoney==0}">
-                                                                  [(${#numbers.formatDecimal(historyBillReturn?.billProduct.product.priceExport,0,'COMMA',0,'POINT')})]
-                                                                   <strong class="fs-tiny text-decoration-underline">đ</strong>
-                                                </span>
+                                    <div>
+                                        <span class="text-strike-through" th:if="${historyBillReturn.billProduct.reducedMoney!=0}">[(${#numbers.formatDecimal(historyBillReturn.billProduct.price,0,'COMMA',0,'POINT')})]</span>
+                                        <span class="fs-tiny text-decoration-underline">đ</span>
+                                    </div>
+                                    <div th:if="${historyBillReturn.billProduct.reducedMoney!=0}">
+                                       <span >
+                                           [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price-historyBillReturn?.billProduct.reducedMoney,0,'COMMA',0,'POINT')})]
+                                           <strong class="fs-tiny text-decoration-underline">đ</strong>
+                                       </span>
+                                    </div>
+                                    <div th:if="${historyBillReturn.billProduct.reducedMoney ==0}">
+                                        <span >
+                                            [(${#numbers.formatDecimal(historyBillReturn?.billProduct.price,0,'COMMA',0,'POINT')})]
+                                            <strong class="fs-tiny text-decoration-underline">đ</strong>
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -289,16 +312,29 @@
                     <br>
                     <div class="row mb-3">
                         <div class="qsfSj4">
+                            <div class="ROZVxd dCx+CJ"><span>Tổng giá trị sản phẩm hoàn trả:  </span></div>
+                            <div class="+MprAa"><span>[(${#numbers.formatDecimal(totalReturn,0,'COMMA',0,'POINT')})]</span><span>đ</span></div>
+                        </div>
+                        <div class="qsfSj4" th:if="${listHDTO.returnMoney < 0}" >
+                            <div class="ROZVxd dCx+CJ"><span>Voucher:  </span></div>
+                            <div class="+MprAa"><span>-[(${#numbers.formatDecimal(listHDTO.bill.voucherValue,0,'COMMA',0,'POINT')})]</span><span>đ</span></div>
+                        </div>
+                        <div class="qsfSj4">
                             <div th:if="${listHDTO.returnMoney >=0}">
                                 <div class="ROZVxd dCx+CJ">Số tiền hoàn lại:</div>
                             </div>
-                            <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span>
-                                <span>đ</span></div>
+                            <div th:if="${listHDTO.returnMoney >=0}">
+                                <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span>
+                                    <span>đ</span></div>
+                                </span>
+                            </div>
                             <div th:if="${listHDTO.returnMoney < 0}">
                                 <div class="ROZVxd dCx+CJ">Khách hàng gửi lại :</div>
-                                <div class="+MprAa">
-                                    <span>[(${#numbers.formatDecimal(listHDTO.returnMoney,0,'COMMA',0,'POINT')})]</span><span>đ</span>
-                                </div>
+                            </div>
+                            <div th:if="${listHDTO.returnMoney <0}">
+                                <div class="+MprAa"><span>[(${#numbers.formatDecimal(listHDTO.returnMoney-(listHDTO.returnMoney*2),0,'COMMA',0,'POINT')})]</span>
+                                    <span>đ</span></div>
+                                </span>
                             </div>
                         </div>
                         <div class="qsfSj4">
@@ -307,19 +343,18 @@
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Số tài khoản:  </span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.accountNumber})]
-                            </div>
-                            <span class="errorSTK text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.accountNumber})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">9704198526191432198</div>
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Ngân hàng:  </span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.bank})]</div>
-                            <span class="errorNH text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.bank})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">NCB</div>
                         </div>
                         <div class="qsfSj4">
                             <div class="ROZVxd dCx+CJ"><span>Chủ sở hữu:</span></div>
-                            <div class="+MprAa">[(${listHDTO?.historyBillProductList[0]?.owner})]</div>
-                            <span class="errorCSH text-danger"></span>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney >= 0}">[(${listHDTO?.historyBillProductList[0]?.owner})]</div>
+                            <div class="+MprAa" th:if="${listHDTO.returnMoney < 0}">NGUYEN VAN A</div>
                         </div>
                     </div>
                     <div class="zrDZlI Q3-CvB">
@@ -335,11 +370,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row mb-3 noteReturn" th:if="${listHDTO.returnMoney <0}">
+                        <span class="text-danger">(*)Lưu ý:</span>
+                        <span>Giá trị đơn hàng sau khi trả hàng của bạn không còn đủ điều kiện áp dụng voucher , hãy xem chi tiết trong <a
+                                th:href="@{/policy}">chính sách trả hàng/hoàn tiền của cửa hàng</a>! </span>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-2" sec:authorize="!isAuthenticated()"></div>
-      </div>
+    </div>
     </div>
 </section>
 <script src="/admin/plugin/js/loadImage.js"></script>
@@ -362,5 +402,4 @@
             title: "Trả hàng thành công!"
         });
     }
-
 </script>
